# mlflow

./: .gitignore  Dockerfile-original-fv.mlflow  Dockerfile.mlflow  Dockerfile.python  README.md  create_s3_bucket.py  create_s3_bucket.sh  demo.py  demo.py.txt  docker-compose.yaml  history.txt  minio.env  mlflow.env  mlflow_experiment.py  mlflow_pred.py  postgres.env  pyproject.toml
envs/: minio.env  postgres.env  python.env
fastapi/: Dockerfile.fastapi  app.py  requirements.txt
fastapi/0d74979f94fb44e2a0d6f8adf1316277/artifacts/model/: MLmodel  conda.yaml  model.pkl  requirements.txt
grafana/: docker-compose.yaml  loki-config.yml  prometheus.yml  promtail-config.yml
jupyterlab/: Dockerfile.jupyterlab  docker-compose.yaml  requirements.txt
jupyterlab/envs/: jupyterlab.env
jupyterlab/extention-settings/: jupyterlab-limit-output.config
jupyterlab/notebooks/: README.md  mlflow_experiment.ipynb  mlflow_pred.ipynb  notebook.ipynb  notebook.py
jupyterlab/notebooks/.ipynb_checkpoints/: mlflow_experiment-checkpoint.ipynb  mlflow_pred-checkpoint.ipynb  notebook-checkpoint.ipynb
jupyterlab/scripts/streamlit/: README.md  evaluate.py  training.py
jupyterlab/scripts/telegram/: README.md  Untitled.ipynb  make-gif.py  requirements.txt  resize.py  telegram_image_downloader.py
mlflow/: Dockerfile.mlflow
mlflow/envs/: mlflow.env
mlflow/scripts/: create_s3_bucket.py  create_s3_bucket.sh
python/: Dockerfile.python  Dockerfile.python-2  demo.py
python/exp_fastapi/: mlflow-2.py  mlflow.py
streamlit/: Dockerfile.streamlit  streamlit.py
(+4 files in other folders)
